clusters/base/kube-hunter/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-hunter
  namespace: kube-hunter
spec:
  ingressClassName: nginx
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-hunter
                port:
                  number: 80
